--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -8,7 +8,7 @@ body {
 
 /** 滚动条 */
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 14px;
     height: 14px;
 }
@@ -31,19 +31,9 @@ body {
 
 ::-webkit-scrollbar-corner {
     background: transparent;
-} */
-
-.ivu-icon {
-  font-family: "Ionicons", "macau-icbc-font" !important;
 }
 
-.sortable-chosen {
-  border: 1px dashed rgba(45, 140, 240, 0.5);
-  padding-left: 10px;
-  cursor: move;
-}
-
-.ivu-form-item-error-tip {
-  left: unset;
-  right: 0;
+.page {
+  padding: 20px;
+  background: #FFF;
 }
